# nmlinux

./: .gitignore  CLAUDE.md  README.md  flake.nix  install.sh  pyproject.toml
.github/: FUNDING.yml
aur/: .SRCINFO  .gitignore  PKGBUILD  nmlinux-1.1.1-1-any.pkg.tar.zst
aur/src/nmlinux-1.1.1/: .gitignore  nmlinux.sh  pyproject.toml
aur/src/nmlinux-1.1.1/nmlinux/core/: settings.py  ssh.py
aur/src/nmlinux-1.1.1/nmlinux/pages/: bandwidth.py  dns.py  interfaces.py  nmap_scan.py  port_scanner.py  settings.py  subnet.py  wifi.py
data/: nmlinux.desktop
docs/: Architecture.md  Carte-des-Modules.md  Decisions-Techniques.md  Journal.md  Maintenance-IA.md  Roadmap.md
nmlinux/: command_palette.py  export_manager.py  main.py  window.py
nmlinux/assets/: iperf3_public_servers.json
nmlinux/core/: asset_collectors.py  cli_bar.py  export_dialog.py  help_content.py  host_actions.py  http_server.py  i18n.py  icons.py  rdp.py  settings.py  smb_mount.py  smb_mount_helper.py  ssh.py  terminal.py  tftp_helper.py  theme.py  tls_watchlist.py  vnc.py
nmlinux/pages/: about.py  asset_inventory.py  (+30 more)
packaging/: bootstrap_macos.sh  build-appimage.sh  install_macos_app.sh  nmlinux.spec  uninstall_macos.sh
tests/: test_asset_collectors.py  test_asset_inventory.py  test_asset_inventory_i18n.py  test_command_palette.py  test_export_manager.py  test_file_transfer_core.py  test_host_actions.py  test_ping_targets.py  test_rdp_core.py  test_smb_mount.py  test_smb_mount_helper.py  test_smb_mount_i18n.py  test_smb_nfs_mount_ui.py  test_speedtest_iperf3.py  test_ssh_keys.py  test_vnc_core.py
(+19 files in other folders)
