[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmlinux"
version = "1.1.1"
description = "A free Linux adaptation of NETworkManager by BornToBeRoot"
readme = "README.md"
license = { text = "GPL-2.0-only" }
requires-python = ">=3.11"
keywords = ["network", "linux", "gui", "wifi", "ssh", "scanner"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Environment :: X11 Applications :: Qt",
    "Topic :: System :: Networking",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PySide6>=6.6",
    "ptyprocess>=0.7",
]

[project.urls]
"Inspired by" = "https://github.com/BornToBeRoot/NETworkManager"

[project.scripts]
nmlinux = "nmlinux.main:main"

[tool.hatch.build.targets.wheel]
packages = ["nmlinux"]
